Fixed some overflow issues (#454)

--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -86,6 +86,7 @@
 
 .map-container {
   height: calc(100% - 88px);
+  overflow-y: hidden;
   position: relative;
 
   @media screen and (min-width: 900px) {
